syntax = "proto3";
package rcc;

service Coordinator {
    rpc RegisterExecutor (ExecutorInfo) returns (RegisterResponse);
    rpc Heartbeat (ExecutorStatus) returns (HeartbeatAck);
    rpc AssignInstance (InstanceAssignment) returns (AssignmentResponse);
}

message ExecutorInfo {
    string id = 1;
    string address = 2;
}

message RegisterResponse {
    bool success = 1;
    string auth_token = 2;
}

message ExecutorStatus {
    string id = 1;
    int32 active_instances = 2;
    float cpu_usage = 3;
    float mem_usage = 4;
}

message HeartbeatAck {}

message InstanceAssignment {
    string instance_id = 1;
    bytes wasm_binary = 2;
}

message AssignmentResponse {
    bool accepted = 1;
}
